Archive pantry items on delete instead of leaving them at 0 remaining; fix stale shopping-list allocations; upgrade to Java 25
Binning/eating an item down to nothing now archives a snapshot (new
inventoryArchive collection) and deletes the live record instead of just
zeroing remaining, so the pantry list stops accumulating dead 0-remaining
rows. A one-time ApplicationRunner backfills existing zeroed items on next
boot and is a no-op afterwards. The shopping list's gap calculation now caps
each allocation by the source item's current remaining (0 if deleted)
instead of trusting the planning-time snapshot, so consuming/binning an
allocated item after planning makes it reappear on the shopping list.

Also upgrades the build to Java 25 (bumping Lombok, JaCoCo, and explicitly
registering Lombok's annotation processor, which newer javac no longer
discovers implicitly from the classpath) and applies OpenRewrite's
UpgradeToJava25 recipe for the accompanying modernizations (SequencedCollection
methods, Mockito javaagent wiring).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01AWtqmTChHbHHQZegNnDKgE